# newsletter_cw6

./: .env_sample  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base_view.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  index.html
client/: admin.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_client_owner.py
client/templates/client/: client_detail.html  client_form.html  client_list.html
config/: settings.py  urls.py
letter/: forms.py  models.py  urls.py  views.py
letter/migrations/: 0001_initial.py  0002_letter_owner.py
letter/templates/: base.html
letter/templates/letter/: letter_confirm_delete.html  letter_detail.html  letter_list.html
newsletter/: admin.py  forms.py  models.py  services.py  urls.py  views.py
newsletter/management/commands/: runsend.py
newsletter/migrations/: 0001_initial.py  0002_delete_letter_alter_newsletter_client.py  0002_remove_newsletter_mailing.py  0003_alter_newsletter_status.py  0003_delete_client_alter_newsletter_client.py  0004_mailing_mailing_alter_mailing_status.py  0005_alter_mailing_status.py  0006_alter_mailing_status.py  0007_alter_newsletter_options.py  0008_newsletter_owner.py
newsletter/templates/: base.html
newsletter/templates/newsletter/: client_form.html  mailing_list.html  newsletter_confirm_delete.html  (+2 more)
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options.py
users/templates/: login.html
(+2 files in other folders)
